styles/_variables.scss
// Fonts
$title-font: "Bebas Neue", cursive;
$caption-font: "Josefin Sans", sans-serif;

// Spacing
$spacingExtraSmall: 5px;
$spacingSmall: 7.5px;
$spacingMedium: 15px;
$spacingLarge: 35px;

// Colors
$bg-color: #eed91e;
$btn-secondary: #fac6c6;
$btn-primary: #ea5454;

